# simple-memory-alloc

./: .env  .gitignore  CMakeLists.txt  Readme.md  arena.c  build.sh  run.sh  test.sh  wasm-build.sh  wasm.env
src/: arena.h  assert.h  debug.h  dynarray.c  dynarray.h  int.h  intrinsics.h  main.c  memory.c  memory.h  platform.c  platform.h  test.c  test.h  test_main.c
